# luminarytrade

./: BRIDGE_IMPLEMENTATION_SUMMARY.md  pnpm-lock.yaml
backend/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  setup.sh  tsconfig.json
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/src/__tests__/: index.test.ts  value-objects.spec.ts
backend/src/adapters/: adapter.integration.spec.ts  adapters.module.ts
backend/src/agent/: agent.controller.spec.ts  agent.controller.ts  agent.module.ts  indexer.service.spec.ts  indexer.service.ts
backend/src/audit/: audit-log.controller.ts  (+5 more)
contracts/agent-metadata/: Cargo.toml  README.md
contracts/bridge/: Cargo.toml  README.md
contracts/common-utils/contract/: Cargo.toml  UPGRADE_MECHANISM.md
contracts/common-utils/contract/src/: error.rs  example_impl.rs  example_impl_v2.rs  lib.rs  marketplace.rs  marketplace_types.rs  oracle_bridge.rs  test_marketplace.rs  timelock_tests.rs  upgrade_integration_tests.rs  upgrade_proxy.rs  upgrade_registry.rs
contracts/common-utils/contract/src/events/: domain_event.rs  publisher.rs  registry.rs
contracts/common-utils/contract/test_snapshots/test_marketplace/: test_list_and_buy_happy_path.1.json
contracts/credit-score/: Cargo.toml
contracts/fraud-detect/: Cargo.toml
frontend/: ADVANCED_INDICATORS.md  INDICATORS_DEBUG_GUIDE.md  package-lock.json  package.json  tsconfig.base.json
frontend/api/: api-response.ts
frontend/src/: App.tsx  CreditScore.tsx  CreditScoreMapper.tsx  FraudReportMapper.tsx  WalletContent.tsx  index.tsx
(+144 files in other folders)
