[package]
name = "common-utils"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
  ".",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.5.0"

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1
